# vision-uss-research

./: .gitignore  README.md  pyproject.toml
configs/paths/: colab_drive.yaml  local.yaml
scripts/: auto_review_with_qwen.py  bootstrap_colab.sh  build_contact_review_sheet.py  build_manifest.py  build_qwen_review_boards.py  build_qwen_review_input.py  enrich_manifest_with_json.py  generate_sample_contacts.py  print_paths.py  profile_json_metadata.py  profile_label_v2.py  sample_research_subset.py
src/vision_uss_research/: settings.py
src/vision_uss_research/inventory/: discover.py
src/vision_uss_research/metadata/: enrich.py
src/vision_uss_research/sampling/: subset.py
src/vision_uss_research/utils/: video.py
