[project]
name = "vision-uss-research"
version = "0.1.0"
description = "Research pipeline for curating a vision dataset from large-scale USS parking sequences"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.10.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"